Fixed invisible success messages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -856,7 +856,6 @@ html.no-touch .section.splash  {
 	padding: 10px;
 	text-align: center;
 	color: green;
-	display:none;
 }
 .error{
 	width: 100%;
